Sep 16, 2002 

  * MODIFIED: Allow for unqualified attribute-names

  * ADDED: "make check"

Older entries

  * FIXED: Type-exception in atom_chars/2

  * FIXED: handling mixed <name>literal</name> and <name>object</name>
    (space canonisation problem).

  * CGI Demo: report errors generated before a fatal exception.

  * FIXED: handling of propertyElt of the form
    rdf:ID="myid" rdf:parseType="Resource" 

  * For objects, map NameSpace:Local to the simple concatenation of the two.
    This implies:

	# Subjects are always atoms
	# Predicates are NameSpace:LocalName or simply Name
	# Objects are atoms (URI) or literal(Value)

  * Warn on things that cannot be converted into an RDF-object rather then
    failing silently.

  * Removed some undesirable choice-points.